text clipping fix

--- a/src/index.css
+++ b/src/index.css
@@ -291,7 +291,7 @@ html {
 
 @media (max-width: 620px) {
   .recipe-modal {
-    margin-top: 19rem;
+    margin-top: 22rem;
     width: 95%;
   }
   .psa {
